# ray-tracer-challenge

./: .clang-format  .gitignore  CMakeLists.txt  README.md  notes.md
src/: CMakeLists.txt  camera.cc  canvas.cc  color.cc  cube.cc  doubler.cpp  intersection.cc  light.cc  main.cpp  material.cc  matrix.cc  pattern.cc  plane.cc  ray.cc  shape.cc  sphere.cc  tuple.cc  world.cc
src/inc/: camera.h  canvas.h  color.h  cone.h  cube.h  cylinder.h  doubler.h  group.h  helpers.h  intersection.h  light.h  material.h  matrix.h  pattern.h  plane.h  ray.h  shape.h  sphere.h  tuple.h  world.h
src/projects/: CMakeLists.txt  CircleChapter5.cc  CircleChapter6.cc  ClockChapter4.cc  Cover.cc  Cubes.cc  Cylinders.cc  Glass.cc  Patterns.cc  PlaneCh9.cc  WorldChapter7.cc  WorldChapters7and8.cc
tests/: CMakeLists.txt  camera_test.cc  canvas_test.cc  color_test.cc  cone_test.cc  cube_test.cc  cylinder_test.cc  doub_test.cpp  group_test.cc  intersection_test.cc  light_test.cc  material_test.cc  matrix_test.cc  pattern_test.cc  plane_test.cc  ray_test.cc  shape_test.cc  sphere_and_intersection_test.cc  sphere_test.cc  tuple_test.cc  world_test.cc
