add_executable(Clock ClockChapter4.cc)
target_link_libraries(Clock stuff)

add_executable(CircleCh5 CircleChapter5.cc)
target_link_libraries(CircleCh5 stuff)

add_executable(CircleCh6 CircleChapter6.cc)
target_link_libraries(CircleCh6 stuff)

add_executable(WorldCh7and8 WorldChapters7and8.cc)
target_link_libraries(WorldCh7and8 stuff)

add_executable(PlaneCh9 PlaneCh9.cc)
target_link_libraries(PlaneCh9 stuff)